--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
-  "author": "Austin Green",
+  "name": "oriolcastro.me",
+  "description": "My personal blog",
+  "version": "2.0.0",
+  "author": "Oriol Castro",
   "dependencies": {
     "bulma": "^0.7.0",
-    "gatsby": "^1.9.213",
-    "gatsby-link": "^1.6.37",
-    "gatsby-plugin-netlify": "^1.0.19",
-    "gatsby-plugin-netlify-cms": "^1.0.9",
-    "gatsby-plugin-react-helmet": "^2.0.5",
-    "gatsby-plugin-sass": "^1.0.17",
-    "gatsby-plugin-sharp": "^1.6.34",
-    "gatsby-remark-images": "^1.5.50",
-    "gatsby-source-filesystem": "^1.5.23",
-    "gatsby-transformer-remark": "^1.7.33",
-    "gatsby-transformer-sharp": "^1.6.21",
+    "gatsby": "next",
+    "gatsby-plugin-netlify": "next",
+    "gatsby-plugin-netlify-cms": "next",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-sass": "next",
+    "gatsby-plugin-sharp": "next",
+    "gatsby-remark-images": "next",
+    "gatsby-source-filesystem": "next",
+    "gatsby-transformer-remark": "next",
+    "gatsby-transformer-sharp": "next",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms": "^1.7.0",
+    "netlify-cms": "^2.0.11",
+    "node-sass": "^4.9.3",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
     "react-helmet": "^5.2.0",
     "uuid": "^3.2.1"
   },
@@ -30,14 +31,16 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
+    "develop": "npm run clean && gatsby develop",
+    "clean": "rimraf .cache public",
     "start": "npm run develop",
-    "build": "gatsby build",
-    "develop": "gatsby develop",
+    "build": "npm run clean && gatsby build",
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.7.4"
+    "prettier": "^1.7.4",
+    "rimraf": "^2.6.2"
   }
 }
