--- a/package.json
+++ b/package.json
@@ -4,28 +4,31 @@
   "version": "2.0.0",
   "author": "Oriol Castro",
   "dependencies": {
-    "gatsby": "^2.0.0-rc.19",
-    "gatsby-plugin-netlify": "^2.0.0-rc.6",
-    "gatsby-plugin-netlify-cms": "^3.0.0-rc.5",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sass": "next",
-    "gatsby-plugin-sharp": "^2.0.0-rc.7",
-    "gatsby-plugin-typography": "^1.7.19",
-    "gatsby-remark-images": "^2.0.1-rc.5",
-    "gatsby-source-filesystem": "^2.0.1-rc.6",
-    "gatsby-transformer-remark": "^2.1.1-rc.5",
-    "gatsby-transformer-sharp": "^2.1.1-rc.3",
+    "gatsby": "^2.0.6",
+    "gatsby-plugin-netlify": "latest",
+    "gatsby-plugin-netlify-cms": "^3.0.2",
+    "gatsby-plugin-react-helmet": "latest",
+    "gatsby-plugin-sass": "latest",
+    "gatsby-plugin-sharp": "latest",
+    "gatsby-remark-embed-spotify": "^2.0.2",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "latest",
+    "gatsby-remark-prismjs": "^3.0.0",
+    "gatsby-remark-relative-images-v2": "^0.1.5",
+    "gatsby-source-filesystem": "latest",
+    "gatsby-transformer-remark": "^2.1.3",
+    "gatsby-transformer-sharp": "latest",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms": "^2.1.0",
     "node-sass": "^4.9.3",
+    "prismjs": "^1.15.0",
     "prop-types": "^15.6.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-helmet": "^5.2.0",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.5",
-    "typography-theme-stern-grove": "^0.15.10",
     "uuid": "^3.2.1"
   },
   "keywords": [
