--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "author": "Oriol Castro",
   "dependencies": {
     "gatsby": "^2.0.6",
+    "gatsby-plugin-feed": "^2.0.5",
     "gatsby-plugin-netlify": "latest",
     "gatsby-plugin-netlify-cms": "^3.0.2",
+    "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "latest",
-    "gatsby-plugin-sass": "latest",
+    "gatsby-plugin-robots-txt": "^1.3.0",
     "gatsby-plugin-sharp": "latest",
+    "gatsby-plugin-sitemap": "^2.0.1",
     "gatsby-remark-embed-spotify": "^2.0.2",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "latest",
