--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Oriol Castro",
   "dependencies": {
     "gatsby": "^2.0.6",
+    "gatsby-image": "^2.0.7",
     "gatsby-plugin-feed": "^2.0.5",
     "gatsby-plugin-netlify": "latest",
     "gatsby-plugin-netlify-cms": "^3.0.2",
