--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "gatsby-plugin-sitemap": "^2.0.1",
     "gatsby-remark-embed-spotify": "^2.0.2",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "latest",
+    "gatsby-remark-images": "^2.0.2",
     "gatsby-remark-prismjs": "^3.0.0",
     "gatsby-remark-relative-images-v2": "^0.1.5",
     "gatsby-source-filesystem": "latest",
     "gatsby-transformer-remark": "^2.1.3",
-    "gatsby-transformer-sharp": "latest",
+    "gatsby-transformer-sharp": "^2.1.2",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms": "^2.1.0",
