--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.1.0",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.5",
     "uuid": "^3.2.1"
