--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "gatsby": "^2.0.6",
     "gatsby-image": "^2.0.7",
     "gatsby-plugin-feed": "^2.0.5",
-    "gatsby-plugin-netlify": "latest",
+    "gatsby-plugin-netlify": "^2.0.3",
     "gatsby-plugin-netlify-cms": "^3.0.2",
     "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-react-helmet": "latest",
+    "gatsby-plugin-react-helmet": "^3.0.1",
     "gatsby-plugin-robots-txt": "^1.3.0",
-    "gatsby-plugin-sharp": "latest",
+    "gatsby-plugin-sharp": "^2.0.11",
     "gatsby-plugin-sitemap": "^2.0.1",
     "gatsby-remark-embed-spotify": "^2.0.2",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^2.0.2",
     "gatsby-remark-prismjs": "^3.0.0",
     "gatsby-remark-relative-images-v2": "^0.1.5",
-    "gatsby-source-filesystem": "latest",
+    "gatsby-source-filesystem": "^2.0.7",
     "gatsby-transformer-remark": "^2.1.3",
     "gatsby-transformer-sharp": "^2.1.2",
     "lodash": "^4.17.5",
