--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "2.0.0",
   "author": "Oriol Castro",
   "dependencies": {
+    "dotenv": "^6.2.0",
     "gatsby": "^2.0",
     "gatsby-image": "^2.0.7",
     "gatsby-plugin-feed": "^2.0.5",
+    "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-netlify": "^2.0.3",
     "gatsby-plugin-netlify-cms": "^3.0.2",
     "gatsby-plugin-offline": "^2.0.5",
