--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^6.2.0",
     "gatsby": "^2.0",
     "gatsby-image": "^2.0.7",
+    "gatsby-plugin-catch-links": "^2.0.9",
     "gatsby-plugin-feed": "^2.0.5",
     "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-netlify": "^2.0.3",
@@ -21,6 +22,7 @@
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-prismjs": "^3.0.0",
     "gatsby-remark-relative-images-v2": "^0.1.5",
+    "gatsby-remark-relative-links": "^0.0.2",
     "gatsby-source-filesystem": "^2.0.7",
     "gatsby-transformer-remark": "^2.1.3",
     "gatsby-transformer-sharp": "^2.1.2",
