--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "2.0.0",
   "author": "Oriol Castro",
   "dependencies": {
+    "@weknow/gatsby-remark-twitter": "^0.2.0",
     "dotenv": "^6.2.0",
     "gatsby": "^2.0",
     "gatsby-image": "^2.0.7",
