--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,6 +17,8 @@ collections:
     folder: "src/pages/blog"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    editor:
+      preview: false
     fields:
       - {
           label: "Template Key",
@@ -27,11 +29,20 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "text" }
+      - { 
+          label: "Featured Image",
+          name: "thumbnail",
+          widget: "image",
+          media_library: 
+            config: 
+              multiple: false 
+        }
       - { label: "Body", name: "body", widget: "markdown" }
       - { label: "Tags", name: "tags", widget: "list" }
 
   - name: "pages"
     label: "Pages"
+    delete: false
     files:
       - file: "src/pages/about/index.md"
         label: "About"
@@ -42,6 +53,18 @@ collections:
               name: "templateKey",
               widget: "hidden",
               default: "about-page",
+            }
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Body", name: "body", widget: "markdown" }
+      - label: "Portfolio"
+        name: "portfolio"
+        file: "src/pages/portfolio/index.md"
+        fields:
+          - {
+              label: "Template Key",
+              name: "templateKey",
+              widget: "hidden",
+              default: "portfolio-page",
             }
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "markdown" }
