--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -29,42 +29,38 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "text" }
-      - { 
-          label: "Featured Image",
-          name: "thumbnail",
-          widget: "image",
-          media_library: 
-            config: 
-              multiple: false 
-        }
+      - { label: "Featured Image", name: "thumbnail", widget: "image" }
       - { label: "Body", name: "body", widget: "markdown" }
       - { label: "Tags", name: "tags", widget: "list" }
 
   - name: "pages"
     label: "Pages"
+    folder: "src/pages"
+    create: true
     delete: false
-    files:
-      - file: "src/pages/about/index.md"
-        label: "About"
-        name: "about"
-        fields:
-          - {
-              label: "Template Key",
-              name: "templateKey",
-              widget: "hidden",
-              default: "about-page",
-            }
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Body", name: "body", widget: "markdown" }
-      - label: "Portfolio"
-        name: "portfolio"
-        file: "src/pages/portfolio/index.md"
-        fields:
-          - {
-              label: "Template Key",
-              name: "templateKey",
-              widget: "hidden",
-              default: "portfolio-page",
-            }
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Body", name: "body", widget: "markdown" }
+    editor:
+      preview: false
+    fields:
+      - {
+          label: "Template Key",
+          name: "templateKey",
+          widget: "hidden",
+          default: "about-page",
+        }
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Featured Image", name: "thumbnail", widget: "image" }
+      - { label: "Body", name: "body", widget: "markdown" }
+    # files:
+    #   - file: "src/pages/about/index.md"
+    #     label: "About"
+    #     name: "about"
+    #     fields:
+    #     - {
+    #           label: "Template Key",
+    #           name: "templateKey",
+    #           widget: "hidden",
+    #           default: "portfolio-page",
+    #         }
+    #       - { label: "Title", name: "title", widget: "string" }
+    #       - { label: "Featured Image", name: "thumbnail", widget: "image" }
+    #       - { label: "Body", name: "body", widget: "markdown" }
