--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-netlify": "^2.0.3",
     "gatsby-plugin-netlify-cms": "^3.0.2",
+    "gatsby-plugin-netlify-cms-paths": "^1.1.0",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.1",
     "gatsby-plugin-robots-txt": "^1.3.0",
@@ -25,6 +26,7 @@
     "gatsby-remark-relative-images-v2": "^0.1.5",
     "gatsby-remark-relative-links": "^0.0.3",
     "gatsby-source-filesystem": "^2.0.7",
+    "gatsby-source-graphql": "^2.0.10",
     "gatsby-transformer-remark": "^2.1.3",
     "gatsby-transformer-sharp": "^2.1.2",
     "lodash": "^4.17.5",
