Fix Logo image in Netlify CMS

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,7 +9,7 @@ public_folder: /img
 
 display_url: https://oriolcastro.me
 
-logo_url: https://oriolcastro.me/static/a21f9c9b7c7ca3cb1062a93c5a36fe4f/cdec6/me.webp
+logo_url: https://res.cloudinary.com/okstudio/image/upload/v1552298710/me.jpg
 
 collections:
   - name: "blog"
