--- a/package.json
+++ b/package.json
@@ -1,49 +1,50 @@
 {
   "name": "oriolcastro.me",
   "description": "My personal blog",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "author": "Oriol Castro",
   "dependencies": {
-    "@weknow/gatsby-remark-twitter": "^0.2.0",
-    "dotenv": "^7.0.0",
-    "gatsby": "^2.0",
-    "gatsby-image": "^2.0.7",
-    "gatsby-plugin-catch-links": "^2.0.9",
-    "gatsby-plugin-feed": "^2.0.5",
-    "gatsby-plugin-gtag": "^1.0.7",
-    "gatsby-plugin-netlify": "^2.0.3",
-    "gatsby-plugin-netlify-cms": "^3.0.2",
-    "gatsby-plugin-netlify-cms-paths": "^1.1.0",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.0",
-    "gatsby-plugin-react-helmet": "^3.0.1",
-    "gatsby-plugin-robots-txt": "^1.3.0",
-    "gatsby-plugin-sharp": "^2.0.11",
-    "gatsby-plugin-sitemap": "^2.0.1",
+    "@weknow/gatsby-remark-twitter": "^0.2.3",
+    "dotenv": "^8.1.0",
+    "gatsby": "^2.15.20",
+    "gatsby-image": "^2.2.20",
+    "gatsby-plugin-catch-links": "^2.1.10",
+    "gatsby-plugin-feed": "^2.3.13",
+    "gatsby-plugin-gtag": "^1.0.11",
+    "gatsby-plugin-netlify": "^2.1.15",
+    "gatsby-plugin-netlify-cms": "^4.1.17",
+    "gatsby-plugin-netlify-cms-paths": "^1.3.0",
+    "gatsby-plugin-offline": "^3.0.8",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "gatsby-plugin-react-helmet": "^3.1.8",
+    "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-sharp": "^2.2.25",
+    "gatsby-plugin-sitemap": "^2.2.14",
     "gatsby-remark-embed-spotify": "^2.0.2",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^3.0.1",
-    "gatsby-remark-prismjs": "^3.0.0",
+    "gatsby-remark-images": "^3.1.23",
+    "gatsby-remark-prismjs": "^3.3.14",
     "gatsby-remark-relative-images-v2": "^0.1.5",
     "gatsby-remark-relative-links": "^0.0.3",
-    "gatsby-source-filesystem": "^2.0.7",
-    "gatsby-source-graphql": "^2.0.10",
-    "gatsby-transformer-remark": "^2.1.3",
-    "gatsby-transformer-sharp": "^2.1.2",
-    "lodash": "^4.17.5",
-    "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms": "^2.3.2",
-    "node-sass": "^4.9.3",
-    "prismjs": "^1.15.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.1.0",
-    "react-share": "^2.3.1",
-    "semantic-ui-css": "^2.3.3",
-    "semantic-ui-react": "^0.86.0",
-    "uuid": "^3.2.1"
+    "gatsby-source-filesystem": "^2.1.26",
+    "gatsby-source-graphql": "^2.1.15",
+    "gatsby-transformer-remark": "^2.6.24",
+    "gatsby-transformer-sharp": "^2.2.16",
+    "lodash": "^4.17.15",
+    "lodash-webpack-plugin": "^0.11.5",
+    "netlify-cms": "^2.9.7",
+    "netlify-cms-app": "^2.9.7",
+    "node-sass": "^4.12.0",
+    "prismjs": "^1.17.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
+    "react-share": "^3.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1",
+    "uuid": "^3.3.3"
   },
   "keywords": [
     "gatsby"
@@ -60,7 +61,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.7.4",
-    "rimraf": "^2.6.2"
+    "prettier": "^1.18.2",
+    "rimraf": "^3.0.0"
   }
 }
