--- a/package.json
+++ b/package.json
@@ -1,49 +1,57 @@
 {
   "name": "oriolcastro.me",
   "description": "My personal blog",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "author": "Oriol Castro",
   "dependencies": {
-    "@weknow/gatsby-remark-twitter": "^0.2.0",
-    "dotenv": "^7.0.0",
-    "gatsby": "^2.0",
-    "gatsby-image": "^2.0.7",
-    "gatsby-plugin-catch-links": "^2.0.9",
-    "gatsby-plugin-feed": "^2.0.5",
-    "gatsby-plugin-gtag": "^1.0.7",
-    "gatsby-plugin-netlify": "^2.0.3",
-    "gatsby-plugin-netlify-cms": "^3.0.2",
-    "gatsby-plugin-netlify-cms-paths": "^1.1.0",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.0",
-    "gatsby-plugin-react-helmet": "^3.0.1",
-    "gatsby-plugin-robots-txt": "^1.3.0",
-    "gatsby-plugin-sharp": "^2.0.11",
-    "gatsby-plugin-sitemap": "^2.0.1",
-    "gatsby-remark-embed-spotify": "^2.0.2",
+    "@theme-ui/typography": "^0.3.0",
+    "@weknow/gatsby-remark-twitter": "^0.2.3",
+    "dotenv": "^8.2.0",
+    "gatsby": "^2.19.32",
+    "gatsby-image": "^2.2.43",
+    "gatsby-plugin-catch-links": "^2.1.27",
+    "gatsby-plugin-feed": "^2.3.28",
+    "gatsby-plugin-gtag": "^1.0.13",
+    "gatsby-plugin-netlify": "^2.1.34",
+    "gatsby-plugin-netlify-cms": "^4.1.41",
+    "gatsby-plugin-netlify-cms-paths": "^1.3.0",
+    "gatsby-plugin-offline": "^3.0.37",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "gatsby-plugin-react-helmet": "^3.1.23",
+    "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-sharp": "^2.4.7",
+    "gatsby-plugin-sitemap": "^2.2.28",
+    "gatsby-plugin-theme-ui": "^0.3.0",
+    "gatsby-plugin-tinacms": "^0.1.26",
+    "gatsby-remark-embed-spotify": "^2.1.1",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^3.0.1",
-    "gatsby-remark-prismjs": "^3.0.0",
+    "gatsby-remark-images": "^3.1.46",
+    "gatsby-remark-prismjs": "^3.3.33",
     "gatsby-remark-relative-images-v2": "^0.1.5",
     "gatsby-remark-relative-links": "^0.0.3",
-    "gatsby-source-filesystem": "^2.0.7",
-    "gatsby-source-graphql": "^2.0.10",
-    "gatsby-transformer-remark": "^2.1.3",
-    "gatsby-transformer-sharp": "^2.1.2",
-    "lodash": "^4.17.5",
-    "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms": "^2.3.2",
-    "node-sass": "^4.9.3",
-    "prismjs": "^1.15.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.1.0",
-    "react-share": "^2.3.1",
-    "semantic-ui-css": "^2.3.3",
-    "semantic-ui-react": "^0.86.0",
-    "uuid": "^3.2.1"
+    "gatsby-source-filesystem": "^2.1.50",
+    "gatsby-source-graphql": "^2.1.34",
+    "gatsby-tinacms-git": "^0.3.0",
+    "gatsby-tinacms-remark": "^0.7.5",
+    "gatsby-transformer-remark": "^2.6.55",
+    "gatsby-transformer-sharp": "^2.3.17",
+    "lodash": "^4.17.15",
+    "netlify-cms": "^2.10.30",
+    "node-sass": "^4.13.1",
+    "prismjs": "^1.19.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.9.0",
+    "react-share": "^4.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
+    "styled-components": "^5.0.1",
+    "theme-ui": "^0.3.1",
+    "typography-theme-noriega": "^0.16.19",
+    "typography-theme-sutro": "^0.16.19",
+    "uuid": "^7.0.2"
   },
   "keywords": [
     "gatsby"
@@ -51,16 +59,16 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "develop": "npm run clean && gatsby develop",
-    "clean": "rimraf .cache public",
+    "develop": "gatsby develop",
     "start": "npm run develop",
-    "build": "npm run clean && gatsby build",
+    "build": "gatsby build",
     "serve": "gatsby serve",
+    "clean": "gatsby clean",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.7.4",
-    "rimraf": "^2.6.2"
+    "prettier": "^1.19.1",
+    "rimraf": "^3.0.2"
   }
 }
