--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "gatsby-transformer-sharp": "^2.4.4",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
+    "polished": "^3.5.1",
     "prism-react-renderer": "^1.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -90,7 +91,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-plugin-simple-import-sort": "^5.0.2",
