--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "clean": "gatsby clean",
     "develop": "gatsby develop",
     "lint": "eslint .",
-    "lint:js": "NODE_ENV=production eslint --cache --cache-location=.cache/eslint --ext .js,.jsx,.html,.ts,.tsx,.mjs --report-unused-disable-directives",
+    "lint:js": "NODE_ENV=production eslint --cache --cache-location=.cache/eslint --ext .js,.jsx,.html --report-unused-disable-directives",
+    "lint:mdx": "NODE_ENV=production eslint --cache --cache-location=.cache/eslint --ext .mdx --report-unused-disable-directives",
     "lint:package": "sort-package-json",
     "serve": "gatsby serve",
     "start": "npm run develop"
@@ -26,11 +27,17 @@
     }
   },
   "lint-staged": {
+    "content/**/*.{mdx}": [
+      "npm run lint:mdx --fix"
+    ],
     "package.json": [
       "npm run lint:package"
     ],
     "src/**/*.{js,jsx}": [
       "npm run lint:js --fix"
+    ],
+    "src/**/*.{mdx}": [
+      "npm run lint:mdx --fix"
     ]
   },
   "browserslist": ">0.5%, not ie 11, not safari 5.1, not op_mini all",
@@ -91,6 +98,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-mdx": "^1.6.9",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
@@ -100,6 +108,7 @@
     "lint-staged": "^10.1.3",
     "prettier": "^2.0.4",
     "prettier-eslint": "^9.0.1",
+    "remark-preset-prettier": "^0.4.0",
     "sort-package-json": "^1.41.0"
   }
 }
