chore: update and remove dependencies

--- a/package.json
+++ b/package.json
@@ -45,10 +45,9 @@
     "@mdx-js/mdx": "^1.5.8",
     "@mdx-js/react": "^1.5.8",
     "@pauliescanlon/gatsby-mdx-embed": "0.0.17",
-    "@theme-ui/presets": "^0.3.0",
     "@theme-ui/typography": "^0.3.0",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.20.18",
+    "gatsby": "^2.20.22",
     "gatsby-image": "^2.3.2",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-catch-links": "^2.2.1",
@@ -64,11 +63,10 @@
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.2.2",
     "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-source-graphql": "2.1.29",
+    "gatsby-source-graphql": "2.4.0",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.4.4",
     "lodash": "^4.17.15",
-    "node-sass": "^4.13.1",
     "polished": "^3.5.1",
     "prism-react-renderer": "^1.0.2",
     "prop-types": "^15.7.2",
@@ -77,12 +75,10 @@
     "react-helmet": "^6.0.0",
     "react-icons": "^3.9.0",
     "react-live": "^2.2.2",
-    "react-share": "^4.1.0",
     "theme-ui": "^0.3.1",
     "typeface-merriweather": "0.0.72",
     "typeface-open-sans": "0.0.75",
-    "typography-theme-sutro": "^0.16.19",
-    "uuid": "^7.0.3"
+    "typography-theme-sutro": "^0.16.19"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
