--- a/package.json
+++ b/package.json
@@ -42,69 +42,70 @@
   },
   "browserslist": ">0.5%, not ie 11, not safari 5.1, not op_mini all",
   "dependencies": {
-    "@mdx-js/mdx": "^1.5.8",
-    "@mdx-js/react": "^1.5.8",
-    "@pauliescanlon/gatsby-mdx-embed": "0.0.17",
-    "@theme-ui/typography": "^0.3.0",
-    "dotenv": "^8.2.0",
-    "gatsby": "^2.20.28",
-    "gatsby-image": "^2.3.4",
-    "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-catch-links": "^2.2.3",
-    "gatsby-plugin-google-analytics": "^2.2.4",
-    "gatsby-plugin-manifest": "^2.3.6",
-    "gatsby-plugin-mdx": "^1.1.9",
-    "gatsby-plugin-netlify": "^2.2.3",
-    "gatsby-plugin-offline": "^3.1.4",
-    "gatsby-plugin-react-helmet": "^3.2.4",
-    "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.5.6",
-    "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^3.2.4",
-    "gatsby-source-filesystem": "^2.2.4",
-    "gatsby-source-graphql": "2.4.2",
-    "gatsby-transformer-remark": "^2.7.3",
-    "gatsby-transformer-sharp": "^2.4.6",
-    "lodash": "^4.17.15",
-    "polished": "^3.5.2",
-    "prism-react-renderer": "^1.0.2",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
-    "react-icons": "^3.10.0",
-    "react-live": "^2.2.2",
-    "theme-ui": "^0.3.1",
-    "typeface-merriweather": "0.0.72",
-    "typeface-open-sans": "0.0.75",
-    "typography-theme-sutro": "^0.16.19"
+    "@mdx-js/mdx": "1.6.18",
+    "@mdx-js/react": "1.6.18",
+    "@theme-ui/typography": "0.3.0",
+    "dotenv": "8.2.0",
+    "fontsource-merriweather": "3.0.9",
+    "fontsource-open-sans": "3.0.9",
+    "gatsby": "2.24.68",
+    "gatsby-image": "2.4.21",
+    "gatsby-plugin-alias-imports": "1.0.5",
+    "gatsby-plugin-catch-links": "2.3.15",
+    "gatsby-plugin-google-analytics": "2.3.16",
+    "gatsby-plugin-manifest": "2.4.34",
+    "gatsby-plugin-mdx": "1.2.44",
+    "gatsby-plugin-mdx-embed": "0.0.14",
+    "gatsby-plugin-netlify": "2.3.17",
+    "gatsby-plugin-offline": "3.2.31",
+    "gatsby-plugin-react-helmet": "3.3.13",
+    "gatsby-plugin-robots-txt": "1.5.3",
+    "gatsby-plugin-sharp": "2.6.39",
+    "gatsby-plugin-theme-ui": "0.3.0",
+    "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-images": "3.3.33",
+    "gatsby-source-filesystem": "^2.3.33",
+    "gatsby-source-graphql": "2.7.6",
+    "gatsby-transformer-remark": "2.8.38",
+    "gatsby-transformer-sharp": "2.5.17",
+    "lodash": "4.17.20",
+    "mdx-embed": "0.0.14",
+    "polished": "4.0.1",
+    "prism-react-renderer": "1.1.1",
+    "prop-types": "15.7.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-helmet": "6.1.0",
+    "react-icons": "3.11.0",
+    "react-live": "2.2.2",
+    "theme-ui": "0.3.1",
+    "typography-theme-sutro": "0.16.19"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.10.1",
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.12.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-import-resolver-custom-alias": "^1.2.0",
-    "eslint-loader": "^4.0.0",
-    "eslint-plugin-compat": "^3.5.1",
-    "eslint-plugin-flowtype": "^4.7.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-json": "^2.1.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-mdx": "^1.6.9",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "eslint-plugin-simple-import-sort": "^5.0.2",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-compat": "^3.8.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-json": "^2.1.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-mdx": "^1.8.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
     "gatsby-plugin-eslint": "^2.0.8",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.1.7",
-    "prettier": "^2.0.4",
-    "prettier-eslint": "^9.0.1",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "prettier": "^2.1.2",
+    "prettier-eslint": "^11.0.0",
     "remark-preset-prettier": "^0.4.0",
-    "sort-package-json": "^1.42.0"
+    "sort-package-json": "^1.46.0"
   }
 }
