--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Oriol Castro",
   "main": "n/a",
   "scripts": {
-    "build": "gatsby build",
+    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "clean": "gatsby clean",
     "develop": "gatsby develop",
     "lint": "eslint .",
