--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,5 @@
   YARN_FLAGS = "--no-ignore-optional"
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
+[[plugins]]
+  package = "@netlify/plugin-lighthouse"
