--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gatsby-plugin-mdx-embed": "0.0.14",
     "gatsby-plugin-netlify": "2.3.17",
     "gatsby-plugin-offline": "3.2.31",
+    "gatsby-plugin-preconnect": "^1.1.54",
     "gatsby-plugin-react-helmet": "3.3.13",
     "gatsby-plugin-robots-txt": "1.5.3",
     "gatsby-plugin-sharp": "2.6.39",
