chore: update dependencies and dev command

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "clean": "gatsby clean",
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "lint": "eslint .",
     "lint:js": "NODE_ENV=production eslint --cache --cache-location=.cache/eslint --ext .js,.jsx,.html --report-unused-disable-directives",
     "lint:mdx": "NODE_ENV=production eslint --cache --cache-location=.cache/eslint --ext .mdx --report-unused-disable-directives",
@@ -49,13 +49,13 @@
     "dotenv": "8.2.0",
     "fontsource-merriweather": "3.0.9",
     "fontsource-open-sans": "3.0.9",
-    "gatsby": "2.24.68",
+    "gatsby": "2.24.70",
     "gatsby-image": "2.4.21",
     "gatsby-plugin-alias-imports": "1.0.5",
     "gatsby-plugin-catch-links": "2.3.15",
-    "gatsby-plugin-google-analytics": "2.3.16",
+    "gatsby-plugin-google-analytics": "2.3.17",
     "gatsby-plugin-manifest": "2.4.34",
-    "gatsby-plugin-mdx": "1.2.44",
+    "gatsby-plugin-mdx": "1.2.46",
     "gatsby-plugin-mdx-embed": "0.0.14",
     "gatsby-plugin-netlify": "2.3.17",
     "gatsby-plugin-offline": "3.2.31",
@@ -67,7 +67,7 @@
     "gatsby-plugin-theme-ui": "0.3.0",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "3.3.33",
-    "gatsby-source-filesystem": "^2.3.33",
+    "gatsby-source-filesystem": "^2.3.34",
     "gatsby-source-graphql": "2.7.6",
     "gatsby-transformer-remark": "2.8.38",
     "gatsby-transformer-sharp": "2.5.17",
