--- a/package.json
+++ b/package.json
@@ -50,28 +50,28 @@
     "emoji-name-map": "^1.2.9",
     "fontsource-merriweather": "3.1.5",
     "fontsource-open-sans": "3.1.5",
-    "gatsby": "2.28.2",
-    "gatsby-image": "2.7.0",
+    "gatsby": "2.29.1",
     "gatsby-plugin-alias-imports": "1.0.5",
-    "gatsby-plugin-catch-links": "2.6.0",
-    "gatsby-plugin-google-analytics": "2.7.0",
-    "gatsby-plugin-manifest": "2.8.0",
-    "gatsby-plugin-mdx": "1.6.0",
+    "gatsby-plugin-catch-links": "2.7.0",
+    "gatsby-plugin-google-analytics": "2.8.0",
+    "gatsby-plugin-image": "^0.4.0",
+    "gatsby-plugin-manifest": "2.9.0",
+    "gatsby-plugin-mdx": "1.7.0",
     "gatsby-plugin-mdx-embed": "0.0.16",
-    "gatsby-plugin-netlify": "2.7.0",
-    "gatsby-plugin-offline": "3.6.0",
+    "gatsby-plugin-netlify": "2.8.0",
+    "gatsby-plugin-offline": "3.7.0",
     "gatsby-plugin-preconnect": "^1.1.54",
-    "gatsby-plugin-preload-fonts": "^1.5.0",
-    "gatsby-plugin-react-helmet": "3.6.0",
+    "gatsby-plugin-preload-fonts": "^1.6.0",
+    "gatsby-plugin-react-helmet": "3.7.0",
     "gatsby-plugin-robots-txt": "1.5.3",
-    "gatsby-plugin-sharp": "2.10.1",
+    "gatsby-plugin-sharp": "2.11.1",
     "gatsby-plugin-theme-ui": "0.3.4",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "3.7.1",
-    "gatsby-source-filesystem": "^2.7.0",
-    "gatsby-source-graphql": "2.10.0",
-    "gatsby-transformer-remark": "2.12.0",
-    "gatsby-transformer-sharp": "2.8.0",
+    "gatsby-remark-images": "3.8.0",
+    "gatsby-source-filesystem": "^2.8.0",
+    "gatsby-source-graphql": "2.11.0",
+    "gatsby-transformer-remark": "2.13.0",
+    "gatsby-transformer-sharp": "2.9.0",
     "lodash": "4.17.20",
     "mdx-embed": "0.0.16",
     "polished": "4.0.5",
@@ -94,18 +94,18 @@
     "eslint-config-react-app": "^6.0.0",
     "eslint-import-resolver-custom-alias": "^1.2.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-compat": "^3.8.0",
+    "eslint-plugin-compat": "^3.9.0",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-json": "^2.1.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-mdx": "^1.8.2",
-    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "gatsby-plugin-eslint": "^2.0.8",
-    "husky": "^4.3.5",
+    "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
