chore: update dependencies and remove unused plugins

--- a/package.json
+++ b/package.json
@@ -43,37 +43,36 @@
   },
   "browserslist": ">0.5%, not ie 11, not safari 5.1, not op_mini all",
   "dependencies": {
+    "@fontsource/merriweather": "4.0.1",
+    "@fontsource/open-sans": "4.0.1",
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
-    "@theme-ui/typography": "0.3.4",
+    "@theme-ui/typography": "0.3.5",
     "dotenv": "8.2.0",
-    "emoji-name-map": "^1.2.9",
-    "fontsource-merriweather": "3.1.5",
-    "fontsource-open-sans": "3.1.5",
-    "gatsby": "2.29.1",
+    "emoji-name-map": "1.2.9",
+    "gatsby": "2.29.2",
     "gatsby-plugin-alias-imports": "1.0.5",
     "gatsby-plugin-catch-links": "2.7.0",
-    "gatsby-plugin-google-analytics": "2.8.0",
-    "gatsby-plugin-image": "^0.4.0",
-    "gatsby-plugin-manifest": "2.9.0",
-    "gatsby-plugin-mdx": "1.7.0",
-    "gatsby-plugin-mdx-embed": "0.0.16",
+    "gatsby-plugin-image": "^0.4.1",
+    "gatsby-plugin-manifest": "2.9.1",
+    "gatsby-plugin-mdx": "1.7.1",
+    "gatsby-plugin-mdx-embed": "0.0.17",
     "gatsby-plugin-netlify": "2.8.0",
-    "gatsby-plugin-offline": "3.7.0",
-    "gatsby-plugin-preconnect": "^1.1.54",
-    "gatsby-plugin-preload-fonts": "^1.6.0",
+    "gatsby-plugin-offline": "3.7.1",
+    "gatsby-plugin-preload-fonts": "1.6.1",
     "gatsby-plugin-react-helmet": "3.7.0",
-    "gatsby-plugin-robots-txt": "1.5.3",
-    "gatsby-plugin-sharp": "2.11.1",
-    "gatsby-plugin-theme-ui": "0.3.4",
+    "gatsby-plugin-robots-txt": "1.5.5",
+    "gatsby-plugin-sharp": "2.11.2",
+    "gatsby-plugin-sitemap": "2.9.0",
+    "gatsby-plugin-theme-ui": "0.3.5",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "3.8.0",
-    "gatsby-source-filesystem": "^2.8.0",
+    "gatsby-remark-images": "3.8.1",
+    "gatsby-source-filesystem": "^2.8.1",
     "gatsby-source-graphql": "2.11.0",
-    "gatsby-transformer-remark": "2.13.0",
+    "gatsby-transformer-remark": "2.13.1",
     "gatsby-transformer-sharp": "2.9.0",
     "lodash": "4.17.20",
-    "mdx-embed": "0.0.16",
+    "mdx-embed": "0.0.17",
     "polished": "4.0.5",
     "prism-react-renderer": "1.1.1",
     "prop-types": "15.7.2",
@@ -82,7 +81,7 @@
     "react-helmet": "6.1.0",
     "react-icons": "4.1.0",
     "react-live": "2.2.3",
-    "theme-ui": "0.3.4",
+    "theme-ui": "0.3.5",
     "typography-theme-sutro": "0.16.19"
   },
   "devDependencies": {
