--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
     "@fontsource/open-sans": "4.0.1",
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
-    "@theme-ui/typography": "0.3.5",
+    "@tailwindcss/line-clamp": "^0.2.0",
+    "@tailwindcss/typography": "^0.4.0",
     "dotenv": "8.2.0",
     "emoji-name-map": "1.2.9",
     "gatsby": "2.29.2",
     "gatsby-plugin-alias-imports": "1.0.5",
     "gatsby-plugin-catch-links": "2.7.0",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-image": "^0.4.1",
     "gatsby-plugin-manifest": "2.9.1",
     "gatsby-plugin-mdx": "1.7.1",
@@ -60,11 +62,11 @@
     "gatsby-plugin-netlify": "2.8.0",
     "gatsby-plugin-offline": "3.7.1",
     "gatsby-plugin-preload-fonts": "1.6.1",
+    "gatsby-plugin-react-head": "^1.1.0",
     "gatsby-plugin-react-helmet": "3.7.0",
     "gatsby-plugin-robots-txt": "1.5.5",
     "gatsby-plugin-sharp": "2.11.2",
     "gatsby-plugin-sitemap": "2.9.0",
-    "gatsby-plugin-theme-ui": "0.3.5",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "3.8.1",
     "gatsby-source-filesystem": "^2.8.1",
@@ -73,18 +75,20 @@
     "gatsby-transformer-sharp": "2.9.0",
     "lodash": "4.17.20",
     "mdx-embed": "0.0.17",
+    "nightwind": "^1.1.12",
     "polished": "4.0.5",
+    "postcss-nesting": "^8.0.1",
     "prism-react-renderer": "1.1.1",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-head": "^3.4.0",
     "react-helmet": "6.1.0",
     "react-icons": "4.1.0",
-    "react-live": "2.2.3",
-    "theme-ui": "0.3.5",
-    "typography-theme-sutro": "0.16.19"
+    "react-live": "2.2.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "eslint": "^7.16.0",
@@ -104,11 +108,14 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "gatsby-plugin-eslint": "^2.0.8",
+    "gatsby-plugin-postcss": "3.0.0",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
+    "postcss": "^8.2.8",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "remark-preset-prettier": "^0.4.0",
-    "sort-package-json": "^1.48.0"
+    "sort-package-json": "^1.48.0",
+    "tailwindcss": "^2.1.2"
   }
 }
